# LAPlus

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/dfa/: CMakeLists.txt
examples/dfa/include/: dfa_layer.hpp  layer.hpp
examples/dfa/src/: dfa_layer.cpp  layer.cpp  main.cpp
include/: laplus.hpp
include/laplus/: internal.hpp  math.hpp  matrixf.hpp  typedef.hpp  vectorf.hpp
include/laplus/internal/: array.hpp  array_impl.hpp  shared_array.hpp  shared_array_impl.hpp
src/: CMakeLists.txt
src/laplus/: CMakeLists.txt  math.cpp  matrixf.cpp  vectorf.cpp
tests/: CMakeLists.txt  benchmarks.cpp  laplus.cpp  unit_tests.cpp
tests/laplus/: matrixf.cpp  vectorf.cpp
tests/laplus/internal/: array.cpp  shared_array.cpp
