if (test)
  find_package(Threads REQUIRED)
  include_directories(${CMAKE_INSTALL_PREFIX}/include)
  link_directories(${CMAKE_INSTALL_PREFIX}/lib)
  enable_testing()
  add_executable(unit_tests laplus.cpp)
  add_dependencies(unit_tests googletest OpenBLAS)
  target_link_libraries(unit_tests openblas gtest gtest_main ${CMAKE_THREAD_LIBS_INIT})
  add_test(NAME laplus-test COMMAND unit_tests)
endif()
